--- a/w3.css
+++ b/w3.css
@@ -69,7 +69,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-bar-right{padding:8px 16px;float:right;width:auto;border:none;display:block;outline:0}
 .w3-bar .w3-dropdown-hover,.w3-bar .w3-dropdown-click{position:static;float:left}
 .w3-bar .w3-button{white-space:normal}
-.w3-bar-block .w3-bar-item{position: relative; width:100%;display:block;padding:8px 16px;text-align:left;border:none;white-space:normal;float:none;outline:0}
+.w3-bar-block .w3-bar-item{position: relative; width:100%;display:block;padding:8px 16px;text-align:left;border:none;white-space:normal;float:none;outline:0;z-index: 2;}
 .w3-bar-block.w3-center .w3-bar-item{text-align:center}.w3-block{display:block;width:100%}
 .w3-responsive{display:block;overflow-x:auto}
 .w3-container:after,.w3-container:before,.w3-panel:after,.w3-panel:before,.w3-row:after,.w3-row:before,.w3-row-padding:after,.w3-row-padding:before,
@@ -85,7 +85,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-col.l5{width:41.66666%}.w3-col.l6{width:49.99999%}.w3-col.l7{width:58.33333%}.w3-col.l8{width:66.66666%}
 .w3-col.l9{width:74.99999%}.w3-col.l10{width:83.33333%}.w3-col.l11{width:91.66666%}.w3-col.l12{width:99.99999%}}
 .w3-rest{overflow:hidden}.w3-stretch{margin-left:-16px;margin-right:-16px}
-.w3-content,.w3-auto{margin-left:auto;margin-right:auto}.w3-content{max-width:980px}.w3-auto{max-width:1140px}
+.w3-content,.w3-auto{margin-left:auto;margin-right:auto}.w3-content{max-width:1200px}.w3-auto{max-width:1140px}
 .w3-cell-row{display:table;width:100%}.w3-cell{display:table-cell}
 .w3-cell-top{vertical-align:top}.w3-cell-middle{vertical-align:middle}.w3-cell-bottom{vertical-align:bottom}
 .w3-hide{display:none!important}.w3-show-block,.w3-show{display:block!important}.w3-show-inline-block{display:inline-block!important}
@@ -239,7 +239,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-dark-grey,.w3-hover-border-dark-grey:hover,.w3-border-dark-gray,.w3-hover-border-dark-gray:hover{border-color:#616161!important}
 .w3-border-pale-red,.w3-hover-border-pale-red:hover{border-color:#ffe7e7!important}.w3-border-pale-green,.w3-hover-border-pale-green:hover{border-color:#e7ffe7!important}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
-
+.small-bar{position: fixed; top:0 ; margin-top: 58px; z-index: 3; width:100%}
 
 /* center an imaige*/
 
@@ -340,8 +340,8 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   font-size: 14px;
   box-shadow: 0 0 2px 3px rgb(211, 210, 210);
   cursor: pointer;
-  top:1125px;
-  left:800px;
+  top:1200px;
+  left:915px;
  
 }
 #num_cust6{
@@ -352,8 +352,8 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   font-size: 14px;
   box-shadow: 0 0 2px 3px rgb(211, 210, 210);
   cursor: pointer;
-  top:950px;
-  left:650px;
+  top:1025px;
+  left:850px;
   
 }
 #num_cust7{
@@ -364,7 +364,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   font-size: 14px;
   box-shadow: 0 0 2px 3px rgb(211, 210, 210);
   cursor: pointer;
-  top:1125px;
+  top:1180px;
   left:200px;
 
 }
@@ -417,13 +417,13 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   display: none;
   background: rgba(216, 209, 209, 0.685);
   width: 150px;
-  height: 80px;
+  height: 100px;
 }
 #blurb5 {
   display: none;
   background: rgba(216, 209, 209, 0.685);
   width: 150px;
-  height: 40px;
+  height: 80px;
 }
 #blurb6 {
   display: none;
