--- a/w3.css
+++ b/w3.css
@@ -280,10 +280,54 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
   .container{
       display: flex;
-      flex-wrap: wrap ;
-      justify-content: space-around ;
-      align-items: stretch;
+      justify-content: space-around ; 
+      flex-flow: row wrap;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+
   }
+
+
+
+.centered{
+  margin-left: auto;
+}
+
+
+/* Flexbox stuff */
+
+@media screen and (min-width: 46em) {
+  .cards {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+  }
+
+  .card {
+      flex: 0 1 calc(50% - 1em);
+  }
+  .card-3{
+    flex: 0 1 calc(33.3% - 1em);
+  }
+}
+
+@media screen and (min-width: 60em) {
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+  .card {
+      flex: 0 1 calc(50% - 1em);
+  }
+  .card-3{
+    flex: 0 1 calc(33.3% - 1em);
+  }
+}
+
+
 
 /* Hover over picture section  */
 #num_cust1 {
@@ -574,6 +618,21 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
     font-size: 16px;
     padding: 16px 32px;
   }
+  .text-blue {
+    background-color: rgba(3, 9, 95, 0.726);
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+  }
+
+  .text-1 {
+    background-color: rgb(19, 16, 177);
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+    box-shadow: rgb(0,0,0);
+  }
+
 
 
 
