--- a/w3.css
+++ b/w3.css
@@ -250,6 +250,13 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   width: 50%;
 }
 
+.center-pic {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
 /* Float four columns side by side */
 .column {
     float: left;
@@ -333,13 +340,13 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 #num_cust1 {
     padding: 6px;
     background-color:rgba(133, 133, 133, 0.7);
-    position:absolute;
+    position:relative;
     z-index: 1;
     font-size: 12px;
     box-shadow: 0 0 2px 3px rgb(211, 210, 210);
     cursor: pointer;
-    top:70px;
-    left:70px;
+    top:100px;
+    left:100px;
 }
 #num_cust2{
   padding: 8px;
@@ -674,3 +681,9 @@ input[type=submit]:hover {
   color: red;
 }
   
+
+.center-fit {
+  max-width: 100%;
+  max-height: 100vh;
+  margin: auto;
+}
